2017-04-14  Dominique d'Humieres  <dominiq@lps.ens.fr>

	Backport from trunk
	2015-11-18  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/59910
	PR fortran/80388
	* primary.c (gfc_match_structure_constructor): Reduce a structure
	constructor in a DATA statement.

2017-02-07  Steven G. Kargl  <kargl@gcc.gnu.org>

	* trans-types.c	(gfc_get_int_kind_from_width_isofortranen):  Choose
	REAL type with the widest precision if two (or more) have the same
	storage size.

2016-12-22  Thomas Koenig  <tkoenig@gcc.gnu.org>

	Backport from trunk
	PR fortran/78239
	* decl.c (char_len_param_value): Also check for -fimplicit-none
	when determining if implicit none is in force.

2016-12-04  Janus Weil  <janus@gcc.gnu.org>

	Backport from trunk
	PR fortran/78443
	* class.c (add_proc_comp): Add a vtype component for non-overridable
	procedures that are overriding.

2016-12-01  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/78279
	* dependency.c (identical_array_ref): Convert gcc_assert to conditional
	and gfc_internal_error.

2016-11-24  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/78500
	* expr.c (gfc_check_vardef_contextm): Fix NULL pointer dereference.
	* interface.c (matching_typebound_op): Ditto.

2016-11-23  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/78297
	* trans-common.c (finish_equivalences): Do not dereference a NULL pointer.

2016-11-23  Janus Weil  <janus@gcc.gnu.org>

	Backport from trunk
	PR fortran/66227
	* simplify.c (gfc_simplify_extends_type_of): Fix missed optimization.
	Prevent over-simplification. Fix a comment. Add a comment.

2016-11-20  Harald Anlauf  <anlauf@gmx.de>

	PR fortran/69741
	* resolve.c (gfc_resolve_forall): Check for nonscalar index variables.

2016-11-06  Thomas Koenig  <tkoenig@gcc.gnu.org>

	Backport from trunk
	PR fortran/69544
	PR fortran/78178
	* match.c (match_simple_where):  Fill in locus for assigment
	in simple WHERE statement.
	(gfc_match_where):  Likewise.

2016-11-01  Thomas Koenig  <tkoenig@gcc.gnu.org>
