@@ -1,3 +1,9 @@
+2017-04-21  Janus Weil  <janus@gcc.gnu.org>
+
+	Backport from trunk
+	PR fortran/80361
+	* gfortran.dg/class_62.f90: New test case.
+
 2017-04-21  Christophe Lyon  <christophe.lyon@linaro.org>
 
 	Backport from mainline
